tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_const_deci.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:deci = 1.1
x = 2.2

